--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/EmployeesData/.vs/EmployeesData/v16
+/EmployeesData/EmployeesData/obj
