--- a/EmployeesData/EmployeesData/EmployeesData.csproj
+++ b/EmployeesData/EmployeesData/EmployeesData.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Telerik.UI.for.AspNet.Core.Trial" Version="2020.2.617" />
   </ItemGroup>
 
 </Project>
