--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /EmployeesData/.vs/EmployeesData/v16
 /EmployeesData/EmployeesData/obj
 /EmployeesData/EmployeesData/bin/Debug/netcoreapp3.1
+/EmployeesData/EmployeesData/Properties/PublishProfiles
+/EmployeesData/EmployeesData/bin/Release/netcoreapp3.1
